--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+graphviz = "^0.20.3"
+matplotlib = "^3.10.3"
 
 
 [build-system]
